--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,17 +1,18 @@
 project:
   type: website
+  output-dir: docs
 
 website:
-  title: "blog-template"
+  title: "Quanyu Qian – Data Analytics Blog"
   navbar:
     right:
       - about.qmd
       - icon: github
-        href: https://github.com/etc5523-2022
+        href: https://github.com/quanyu-qian
+
+
 format:
   html:
     theme: cosmo
     css: styles.css
-
-
 
