--- a/posts/_metadata.yml
+++ b/posts/_metadata.yml
@@ -2,7 +2,11 @@
 
 # freeze computational output
 # (see https://quarto.org/docs/projects/code-execution.html#freeze)
-freeze: true
+freeze: auto
 
 # Enable banner style title blocks
 title-block-banner: true
+
+author: "Quanyu Qian"
+toc: false
+categories: []
